--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <div class="envelope" onclick="openCard()">
     <div class="card">
         <h1>Happy Valentine's Day!</h1>
-        <img src="D:\CLONED\valentine-card\roses.jpg" alt="Cute Couple" style="width:100%; border-radius:5px;">
+        <img src="roses.jpg" alt="Cute Couple" style="width:100%; border-radius:5px;">
         <p>My love for you grows stronger every day. You're the best thing that ever happened to me. I love you always!</p>
     </div>
     <div class="heart"></div>
